// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FunctionDeclaration > client > should skip non-async server functions 1`] = `
{
  "code": "function example() {
  'use server';

  return 'foo bar';
}",
  "entries": [],
  "files": Map {},
  "map": {
    "file": undefined,
    "mappings": "AACM,SAASA,OAAOA,CAAA,EAAG;EACjB,YAAY;;EACZ,OAAO,SAAS;AAClB",
    "names": [
      "example",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      function example() {
        'use server';
        return 'foo bar';
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`FunctionDeclaration > client > should skip top-level values for scope 1`] = `
{
  "code": "const value = 'foo bar';
const outer = () => {
  async function example() {
    'use server';

    return value;
  }
};",
  "entries": [],
  "files": Map {},
  "map": {
    "file": undefined,
    "mappings": "AACM,MAAMA,KAAK,GAAG,SAAS;AACvB,MAAMC,KAAK,GAAGA,CAAA,KAAM;EAClB,eAAeC,OAAOA,CAAA,EAAG;IACvB,YAAY;;IACZ,OAAOF,KAAK;EACd;AACF,CAAC",
    "names": [
      "value",
      "outer",
      "example",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      const outer = () => {
        async function example() {
          'use server';
          return value;
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`FunctionDeclaration > client > should transform valid server functions 1`] = `
{
  "code": "import { $$server as _$$server } from "my-example/server";
import { $$func as _$$func } from "dismantle/runtime";
const example = _$$server(async () => {
  const _source = (await import("./example.ts?my-example=1.ts")).default;
  return async function example(..._rest) {
    const [_type, _result] = await _$$func(_source, null)([], ..._rest);
    return _result;
  };
});",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (function* example([]) {
  try {
    return [2, 'foo bar'];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": "0BACqBA,OAAOA,CAAA,IAAG;EAAA;IAAA,WAEhB,SAAS;EAAA,SAAAC,MAAA;IAAA,WAAAA,MAAA;EAAA;EAAA;AAClB,CAAC",
        "names": [
          "example",
          "_error",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { server as _entry } from "my-example/client";
export default _entry("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;MACqBA,OAAO,GAAAC,SAAA;EAAA,MAAAC,OAAA,kDAAAC,OAAA;EAAA,sBAAPH,OAAOA,CAAA,GAAAI,KAAA;IAAA,OAAAC,KAAA,EAAAC,OAAA,UAAAC,OAAA,CAAAL,OAAA,eAAAE,KAAA;IAAA,OAAAE,OAAA;EAAA;AAAA",
    "names": [
      "example",
      "_$$server",
      "_source",
      "default",
      "_rest",
      "_type",
      "_result",
      "_$$func",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      async function example() {
        'use server';
        return 'foo bar';
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;

exports[`FunctionDeclaration > client > should transform valid server functions with scope 1`] = `
{
  "code": "const outer = () => {
  const value = 'foo bar';
  async function example() {
    'use server';

    return value;
  }
};",
  "entries": [],
  "files": Map {},
  "map": {
    "file": undefined,
    "mappings": "AACM,MAAMA,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,KAAK,GAAG,SAAS;EACvB,eAAeC,OAAOA,CAAA,EAAG;IACvB,YAAY;;IACZ,OAAOD,KAAK;EACd;AACF,CAAC",
    "names": [
      "outer",
      "value",
      "example",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const outer = () => {
        const value = 'foo bar';
        async function example() {
          'use server';
          return value;
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`FunctionDeclaration > server > should skip non-async server functions 1`] = `
{
  "code": "function example() {
  'use server';

  return 'foo bar';
}",
  "entries": [],
  "files": Map {},
  "map": {
    "file": undefined,
    "mappings": "AACM,SAASA,OAAOA,CAAA,EAAG;EACjB,YAAY;;EACZ,OAAO,SAAS;AAClB",
    "names": [
      "example",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      function example() {
        'use server';
        return 'foo bar';
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`FunctionDeclaration > server > should skip top-level values for scope 1`] = `
{
  "code": "const value = 'foo bar';
const outer = () => {
  async function example() {
    'use server';

    return value;
  }
};",
  "entries": [],
  "files": Map {},
  "map": {
    "file": undefined,
    "mappings": "AACM,MAAMA,KAAK,GAAG,SAAS;AACvB,MAAMC,KAAK,GAAGA,CAAA,KAAM;EAClB,eAAeC,OAAOA,CAAA,EAAG;IACvB,YAAY;;IACZ,OAAOF,KAAK;EACd;AACF,CAAC",
    "names": [
      "value",
      "outer",
      "example",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      const outer = () => {
        async function example() {
          'use server';
          return value;
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`FunctionDeclaration > server > should transform valid server functions 1`] = `
{
  "code": "import { $$server as _$$server } from "my-example/server";
import { $$func as _$$func } from "dismantle/runtime";
const example = _$$server(async () => {
  const _source = (await import("./example.ts?my-example=1.ts")).default;
  return async function example(..._rest) {
    const [_type, _result] = await _$$func(_source, null)([], ..._rest);
    return _result;
  };
});",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (function* example([]) {
  try {
    return [2, 'foo bar'];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": "0BACqBA,OAAOA,CAAA,IAAG;EAAA;IAAA,WAEhB,SAAS;EAAA,SAAAC,MAAA;IAAA,WAAAA,MAAA;EAAA;EAAA;AAClB,CAAC",
        "names": [
          "example",
          "_error",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { server as _entry } from "my-example/server";
import _root from "./example.ts?my-example=0.ts";
export default _entry("26ecc3a5-0-example", _root);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;MACqBA,OAAO,GAAAC,SAAA;EAAA,MAAAC,OAAA,kDAAAC,OAAA;EAAA,sBAAPH,OAAOA,CAAA,GAAAI,KAAA;IAAA,OAAAC,KAAA,EAAAC,OAAA,UAAAC,OAAA,CAAAL,OAAA,eAAAE,KAAA;IAAA,OAAAE,OAAA;EAAA;AAAA",
    "names": [
      "example",
      "_$$server",
      "_source",
      "default",
      "_rest",
      "_type",
      "_result",
      "_$$func",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      async function example() {
        'use server';
        return 'foo bar';
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;

exports[`FunctionDeclaration > server > should transform valid server functions with scope 1`] = `
{
  "code": "const outer = () => {
  const value = 'foo bar';
  async function example() {
    'use server';

    return value;
  }
};",
  "entries": [],
  "files": Map {},
  "map": {
    "file": undefined,
    "mappings": "AACM,MAAMA,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,KAAK,GAAG,SAAS;EACvB,eAAeC,OAAOA,CAAA,EAAG;IACvB,YAAY;;IACZ,OAAOD,KAAK;EACd;AACF,CAAC",
    "names": [
      "outer",
      "value",
      "example",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const outer = () => {
        const value = 'foo bar';
        async function example() {
          'use server';
          return value;
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;
